syntax = "proto3";

option go_package = "gitlab.tech.orange/optisam/optisam-it/optisam-services/notification-service/pkg/api/v1";

package notification.v1;

import "google/api/annotations.proto";


service NotificationService {
    
    //ListScopes returns list of available scopes in system
    rpc SendMail(SendMailRequest) returns (SendMailResponse) {
      option (google.api.http) = {
        post: "/api/v1/notify/sendmail"
        body: "*"
      };
    }
  
}
 message SendMailRequest {
  string mail_subject  = 1;
  string mail_message = 2;
  repeated string mail_to = 3;
  int32 no_of_retiries =4;
 }
 message SendMailResponse {
   string success =1;
 }

 message DeadLetterQueue{	
  string topic_name =1;	
  string message = 2;	
  string error= 3;	
}